--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/esttilos.css">
+  <link rel="stylesheet" href="css/esttilos-dist.css">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
         </ul>
       </nav>
     </header>
-    <section class="content">
+    <div class="content">
       <article class="content-grid">
         <div class="grid-info">
           <h2 class="title-grid"> Transform your brand</h2>
@@ -63,7 +63,7 @@
           <p class="info-grid"> Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
         </div>
       </article>
-    </section>
+    </div>
     <section class="testimonials">
       <h2 class="title-testimonials">Client testimonials</h2>
       <div class="testimonials-container">
@@ -99,7 +99,7 @@
         </div>
       </div>
     </section>
-    <section class="images">
+    <div class="images">
       <picture class="grid-img">
         <source srcset="images/desktop/image-gallery-milkbottles.jpg" media="(min-width:1024px)" class="grid-img-item">
         <img src="images/mobile/image-gallery-milkbottles.jpg" alt="image-gallery-milkbottles" class="grid-item-img">
@@ -116,7 +116,7 @@
         <source srcset="images/desktop/image-gallery-sugarcubes.jpg" media="(min-width:1024px)" class="grid-img-item">
         <img src="images/mobile/image-gallery-sugar-cubes.jpg" alt="image-gallery-sugar-cubes" class="grid-item-img">
       </picture>
-    </section>
+    </div>
   </main>
   <footer class="footer">
     <img src="images/logofooter.svg" alt="" class="footer-logo">
