--- a/index.html
+++ b/index.html
@@ -27,40 +27,42 @@
     </header>
     <div class="content">
       <article class="content-grid">
-        <div class="grid-info">
-          <h2 class="title-grid"> Transform your brand</h2>
-          <p class="info-grid">We are a full-service creative agency specializing in helping brands grow fast. 
-            Engage your clients through compelling visuals that do most of the marketing for you.</p>
-            <a href="#" class="link-grid">Learn more</a>
-        </div>
         <div class="content-img">
           <picture class="grid-img">
             <source srcset="images/desktop/image-transform.jpg" media="(min-width:1024px)" class="item-img">
             <img src="images/mobile/image-transform.jpg" alt="image-transform" class="item-img">
           </picture>
         </div>
-      </article>
-      <article class="content-grid">
         <div class="grid-info">
-          <h2 class="title-grid"> Stand out to the right audience</h2>
-          <p class="info-grid">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+          <h2 class="title-grid"> Transform your brand</h2>
+          <p class="info-grid">We are a full-service creative agency specializing in helping brands grow fast. 
+            Engage your clients through compelling visuals that do most of the marketing for you.</p>
             <a href="#" class="link-grid">Learn more</a>
         </div>
+      </article>
+      <article class="content-grid">
         <div class="content-img">
           <picture class="grid-img">
             <source srcset="images/desktop/image-stand-out.jpg" media="(min-width:1024px)" class="item-img">
             <img src="images/mobile/image-stand-out.jpg" alt="image-stand-out" class="item-img">
           </picture>
         </div>
+        <div class="grid-info">
+          <h2 class="title-grid"> Stand out to the right audience</h2>
+          <p class="info-grid">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+            <a href="#" class="link-grid">Learn more</a>
+        </div>
       </article>
       <article class="content-grid">
         <div class="grid-info">
-          <h2 class="title-grid"> Graphic design</h2>
-          <p class="info-grid"> Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+          <h2 class="title-one"> Graphic design</h2>
+          <p class="info-one"> Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
         </div>
-        <div class="content-img">
-          <h2 class="title-grid">Photography</h2>
-          <p class="info-grid"> Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </article>
+      <article class="content-grid">
+        <div class="grid-info">
+          <h2 class="title-one">Photography</h2>
+          <p class="info-one"> Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
         </div>
       </article>
     </div>
@@ -141,6 +143,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-  <script src="js/script.js"></script>
+  <script src="js/script-dist.js"></script>
 </body>
 </html>
