--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="card--body">
             <p class="card--info">  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
             <p class="card--name">Emily R.</p>
-            <p class="card-work">Marketing Director</p>
+            <p class="card--work">Marketing Director</p>
           </div>
         </div>
         <div class="card">
@@ -86,7 +86,7 @@
           <div class="card--body">
             <p class="card--info">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
             <p class="card--name">Thomas S.</p>
-            <p class="card-work">Chief Operating Officer</p>
+            <p class="card--work">Chief Operating Officer</p>
           </div>
         </div>
         <div class="card">
@@ -96,7 +96,7 @@
           <div class="card--body">
             <p class="card--info">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
             <p class="card--name">Jennie F.</p>
-            <p class="card-work">Business Owner</p>
+            <p class="card--work">Business Owner</p>
           </div>
         </div>
       </div>
