--- a/index.html
+++ b/index.html
@@ -53,18 +53,20 @@
             <a href="#" class="link-grid">Learn more</a>
         </div>
       </article>
-      <article class="content-grid">
-        <div class="grid-info">
-          <h2 class="title-one"> Graphic design</h2>
-          <p class="info-one"> Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
-        </div>
-      </article>
-      <article class="content-grid">
-        <div class="grid-info">
-          <h2 class="title-one">Photography</h2>
-          <p class="info-one"> Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
-        </div>
-      </article>
+      <div class="div">
+        <article class="content-grid">
+          <div class="grid-info">
+            <h2 class="title-one"> Graphic design</h2>
+            <p class="info-one"> Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+          </div>
+        </article>
+        <article class="content-grid">
+          <div class="grid-info">
+            <h2 class="title-one">Photography</h2>
+            <p class="info-one"> Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+          </div>
+        </article>
+      </div>
     </div>
     <section class="testimonials">
       <h2 class="title-testimonials">Client testimonials</h2>
