--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header class="header">
       <img src="images/logo.svg" alt="Logo" class="header--img">
       <img src="images/icon-hamburger.svg" alt="icon-hamburger" class="header--hamburguer">
+      <img src="images/icon-arrow-down.svg" alt="icon-arrow-down" class="header--arrow">
       <h1 class="header--title">We are creatives</h1>
       <nav class="menu--header">
         <ul class="menu">
